--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "sass": "^1.80.4",
     "sass-loader": "^13.0.0",
     "sass-migrator": "^2.2.1",
