--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.1.0",
+    "@vercel/analytics": "^1.3.2",
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
     "postcss": "^8.4.47",
