--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@fontsource/poppins": "^5.1.0",
     "@vercel/analytics": "^1.3.2",
+    "@vercel/node": "^3.2.23",
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
+    "nodemailer": "^6.9.16",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
