--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/node": "^3.2.23",
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
     "nodemailer": "^6.9.16",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
