--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "sass": "^1.80.4",
     "sass-loader": "^13.0.0",
