--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/analytics": "^1.3.2",
     "@vercel/node": "^3.2.23",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "nodemailer": "^6.9.16",
