--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/poppins": "^5.1.0",
     "@vercel/analytics": "^1.3.2",
     "@vercel/node": "^3.2.23",
+    "@vercel/speed-insights": "^1.0.14",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
